# sofurry_scrape

./: .gitignore  LICENSE.md  README.md  cli.py  pyproject.toml
sofurry_scrape/: argparse_utils.py  main.py  utils.py  wget_utils.py
sofurry_scrape/commands/: single_user_scrape.py
