[project]
name = "sofurry-scrape"
version = "0.2.0"
description = "sofurry scrape"
authors = [
    {name = "Mark Grandi"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "actorio (>=0.1.4,<0.2.0)",
    "logging-tree (>=1.10,<2.0)",
    "arrow (>=1.3.0,<2.0.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "lxml (>=5.3.1,<6.0.0)",
    "attrs (>=25.1.0,<26.0.0)",
    "pyhocon (>=0.3.61,<0.4.0)",
    "aio-pika (>=9.5.4,<10.0.0)",
    "httpx[http2] (>=0.28.1,<0.29.0)",
    "yarl (>=1.18.3,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sofurry_cli = 'sofurry_scrape.main:start'